# sixsevenstudio

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: download-ffmpeg-sidecar.sh  version-bump.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: storyboard_system_instruction.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api_key.rs  image.rs  mod.rs  openai.rs  projects.rs
src-tauri/src/commands/openai/: client.rs  commands.rs  mod.rs  responses.rs  types.rs  video.rs
src-tauri/src/commands/projects/: commands.rs  filesystem.rs  mod.rs  paths.rs  scenes.rs  storyboard.rs  types.rs
src-tauri/src/commands/video_editor/: commands.rs  ffmpeg.rs  mod.rs  types.rs
src-tauri/src/commands/video_editor/ffmpeg/: concat.rs  ffmpeg.rs  filters.rs  mod.rs  sprite.rs  waveform.rs
src-tauri/src/utils/: image.rs
src/components/: AnimatedCat.tsx  ApiKey.tsx  GeneratingStatus.tsx  InputBox.tsx  ModelSelect.tsx  RemixPopover.tsx  Sidebar.tsx  VideoDetails.tsx  VideoGallery.tsx  VideoGalleryItem.tsx  VideoPlayer.tsx  VideoSettings.tsx  VideoStatus.tsx  WelcomeDialog.tsx
src/hooks/: use-ai-chat.ts  use-openai.ts  use-toast.ts  use-video-editor-state.ts  use-video-polling.ts  use-videos.ts  use-workspace.ts  useVideoPolling.ts
src/lib/: ai-sdk.ts  utils.ts
src/pages/: Home.tsx  ProjectPage.tsx  StoryboardPage.tsx
src/stores/: useVideoStatusStore.ts
src/types/: constants.ts  (+3 more)
(+45 files in other folders)
